--- a/teoricas/teorica_01/src/mobile_robotics_introduction.tex
+++ b/teoricas/teorica_01/src/mobile_robotics_introduction.tex
@@ -58,13 +58,9 @@
 	La Robótica es la intersección de la ciencia, la ingeniería y la tecnología que produce máquinas, llamadas robots, que sustituyen (o replican) las acciones humanas.
 	\end{block}
 	
-	\begin{block}{Mecatrónica}
-	La Mecatrónica tiene como objetivo el diseño y desarrollo de sistemas inteligentes y automatizados que puedan interactuar con el entorno y adaptarse a diferentes situaciones. Los sistemas mecatrónicos pueden incluir robots, pero también abarcan una amplia gama de productos y sistemas que no necesariamente son robots (como electrodomésticos, dispositivos médicos, etc).
-	\end{block}
+	\note{La Mecatrónica tiene como objetivo el diseño y desarrollo de sistemas inteligentes y automatizados que puedan interactuar con el entorno y adaptarse a diferentes situaciones. Los sistemas mecatrónicos pueden incluir robots, pero también abarcan una amplia gama de productos y sistemas que no necesariamente son robots (como electrodomésticos, dispositivos médicos, etc).}	
 	
-	\begin{block}{La Domótica}
-	La domótica se refiere a la automatización y control inteligente de los sistemas y aparatos del hogar para mejorar la calidad de vida, la eficiencia energética y la seguridad. La palabra ``domótica'' proviene de la unión de las palabras ``domus'' (hogar en latín) y ``robótica''.
-	\end{block}
+	\note{La domótica se refiere a la automatización y control inteligente de los sistemas y aparatos del hogar para mejorar la calidad de vida, la eficiencia energética y la seguridad. La palabra domótica proviene de la unión de las palabras domus (hogar en latín) y robótica.}
 	
 \end{frame}
 
@@ -79,11 +75,11 @@
     \begin{figure}
     	\subfloat[]
     	{
-    		\includegraphics[width=0.2\columnwidth]{rossums_universal_robots_poster.jpg}
-    	}\hfill
+    		\includegraphics[width=0.25\columnwidth,valign=m]{rossums_universal_robots_poster.jpg}
+    	}\hspace{1em}
     	\subfloat[]
     	{
-   			\includegraphics[width=0.5\columnwidth]{rossums_universal_robots_play.jpg}
+   			\includegraphics[width=0.68\columnwidth,valign=m]{rossums_universal_robots_play.jpg}
     	}
     \end{figure}
 
@@ -383,7 +379,7 @@
 
 
 \begin{frame}
-    \frametitle{Laboratorio de Robótica en el CIFASIS}
+    \frametitle{Laboratorio de Robótica del CIFASIS}
       
     \begin{itemize}
         %\item Ernesto Kofman (Investigador Principal)
@@ -409,7 +405,7 @@
 \begin{frame}
     \frametitle{Líneas de Investigación}
     
-    Comentar línea de investigación...
+    Comentar líneas de investigación...
 
 \end{frame}
 
