Slide 1: Minor changes

--- a/teoricas/teorica_01/src/course_organization.tex
+++ b/teoricas/teorica_01/src/course_organization.tex
@@ -51,8 +51,7 @@
 	
 	Regularizar:
 	\begin{itemize}
-		\item Entregas + Trabajos Prácticos (en grupos de 2)
-		\item 1 Parcial
+		\item Trabajos Prácticos (en grupos de 2)
 	\end{itemize}
 
 	Evaluación final:
