Slide 2: arrange images

--- a/teoricas/teorica_02/src/locomotion.tex
+++ b/teoricas/teorica_02/src/locomotion.tex
@@ -42,26 +42,29 @@
         La locomoción en robótica se refiere al movimiento y desplazamiento de robots. 
     \end{block}
     
-    Tipos de Locomoción:
+    \begin{itemize}
+        \item Tipos de Locomoción:
+    \end{itemize}
+
     
    	\only<1>{
    	\begin{figure}[!h]
    		\centering
    		\subfloat[ACM-R5H (Anfíbio)]
         {
-            \includegraphics[width=0.15\columnwidth]{./images/acm-r5h_snake_robot.jpg}
+            \includegraphics[width=0.15\columnwidth,valign=m]{./images/acm-r5h_snake_robot.jpg}
         }
    		\subfloat[\tiny PhantomX Mark II]
    		{
-       		\includegraphics[width=0.15\columnwidth]{images/hexapod_phantomX_mark_II.jpg}
+       		\includegraphics[width=0.15\columnwidth,valign=m]{images/hexapod_phantomX_mark_II.jpg}
    		}
 		\subfloat[ASIMO de Honda]
    		{
-   			\includegraphics[width=0.1\columnwidth]{images/asimo_robot.jpg}
+   			\includegraphics[width=0.1\columnwidth,valign=m]{images/asimo_robot.jpg}
    		}
 		\subfloat[Robot desmalezador]
    		{
-   			\includegraphics[width=0.15\columnwidth]{./images/weed_removal_robot.jpg}
+   			\includegraphics[width=0.15\columnwidth,valign=m]{./images/weed_removal_robot.jpg}
    		}
    	\end{figure}
     }
@@ -69,25 +72,27 @@
     \only<2>{
     	\begin{figure}[!h]
     		\centering
-    		\subfloat[Drone Amazon]
+    		\subfloat[Drone de Amazon]
     		{
-    			\includegraphics[width=0.15\columnwidth]{images/drone.jpg}
+    			\includegraphics[width=0.15\columnwidth,valign=m]{images/drone.jpg}
     		}
-    		\subfloat[Drone Amazon]
+    		\subfloat[Wingtra (Híbrido)]
     		{
-    			\includegraphics[width=0.15\columnwidth]{images/wingtra_hybrid_aerial_robot.jpg}
+    			\includegraphics[width=0.2\columnwidth,valign=m]{images/wingtra_hybrid_aerial_robot.jpg}
     		}
-    		\subfloat[]
+    		\subfloat[Aqua]
     		{
-    			\includegraphics[width=0.15\columnwidth]{images/aqua.png}
+    			\includegraphics[width=0.13\columnwidth,valign=m]{images/aqua.png}
     		}
     	\end{figure}
+        
+        \begin{itemize}
+            \item La elección del método de locomoción depende de varios factores, como el tipo de entorno en el que el robot operará, los objetivos de la misión y las limitaciones de diseño. 
+            
+            \item Utilizamos ruedas por que son muy eficientes en terrenos planos y firmes.
+        \end{itemize}
     }
     
-
-    La elección del método de locomoción depende de varios factores, como el tipo de entorno en el que el robot operará, los objetivos de la misión y las limitaciones de diseño. 
-
-    Utilizamos ruedas por que son muy eficientes en terrenos planos y firmes.
 \end{frame}
 
 
