Slide 02: Fix some bugs

--- a/teoricas/teorica_02/src/pose.tex
+++ b/teoricas/teorica_02/src/pose.tex
@@ -688,7 +688,7 @@ Armamos la matriz de rototraslación, y utilizamos coordenadas homogéneas:
     Los cuaterniones es una generalización de números complejos con tres números imaginarios (i, j y k). Es un número complejo de cuatro dimensiones que se puede utilizar para representar la orientación de un cuerpo rígido o un marco de coordenadas en un espacio tridimensional. La definición general de un cuaternión viene dada por:
     %
     \begin{equation*}
-        q = w + q_x i + q_y j + q_z k = \begin{bmatrix} q_w & q_x & q_y & q_z\end{bmatrix}
+        q = q_w + q_x i + q_y j + q_z k = \begin{bmatrix} q_w & q_x & q_y & q_z\end{bmatrix}
     \end{equation*}
 \end{frame}
 
