--- a/teoricas/teorica_05/src/bibliography.tex
+++ b/teoricas/teorica_05/src/bibliography.tex
@@ -1,4 +1,15 @@
 \begin{frame}
+    \frametitle{Material utilizado para estas slides}
+    
+    \footnotesize
+    \begin{itemize}
+        \item Slides fuertemente basadas de \url{https://youtu.be/ebMyBbkkHWk}
+        \item \url{https://3d.bk.tudelft.nl/courses/geo1016/slides/Lecture_03_Calibration.pdf}
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
 	\frametitle{Bibliografía}
 	\nocite{hartley2003multiple}
 	
