--- a/teoricas/teorica_06/src/bibliography.tex
+++ b/teoricas/teorica_06/src/bibliography.tex
@@ -1,4 +1,20 @@
 \begin{frame}
+    \frametitle{Material}
+    
+    Vídeos para armar estas slides:
+    \begin{itemize}
+        \item Cyrill Stachniss Bayes: \url{https://youtu.be/0lKHFJpaZvE} 
+        \item Cyrill Stachniss KF y EKF: \url{https://youtu.be/E-6paM_Iwfc}
+        \item Chebrolu EKF Localization: \url{https://youtu.be/PiCC-SxWlH8}
+        \item Cyrill Stachniss Particle Filter: \url{https://youtu.be/MsYlueVDLI0}
+        \item Slides de ECI 2012
+        \item Seminario de curso: CS373 Udacity Programming a Robotic Car
+        \item \url{https://www.ipb.uni-bonn.de/html/teaching/photo12-2021/2021-pho2-14-ekf.pptx.pdf}
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
 	\frametitle{Bibliografía}
 	
 	Capítulo 3 y 7 de: \cite{thrun2005probabilistic}
