--- a/teoricas/teorica_08/src/bundle_adjustment.tex
+++ b/teoricas/teorica_08/src/bundle_adjustment.tex
@@ -1,6 +1,9 @@
 \begin{frame}
     \frametitle{Material para Bundle Adjustment}
     \note{Extraído de Curso de Cyrill Stachniss https://youtu.be/LKDLcKrWOIU?si=InRBlf5Nmf7mGM9H}
+    
+    \TODO{Hacer slides de Bundle Adjustment}
+    
     \begin{itemize}
         \item Cyrill Stachniss - The Basics about Bundle Adjustment
         
