Slides 10: Add control_architecture image

--- a/teoricas/teorica_10/src/bibliography.tex
+++ b/teoricas/teorica_10/src/bibliography.tex
@@ -1,4 +1,15 @@
 \begin{frame}
+    \frametitle{Material utilizado para estas slides}
+    
+    \begin{itemize}
+        \item Robot Control (Nived Chebrolu):        : \url{https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+        \item Self-Driving Cars: Control (Nived Chebrolu): \url{https://youtu.be/XmjjmnDcduU?si=690is9yo5jURrF0R}
+        \item curso: CS373 Udacity Programming a Robotic Car
+    \end{itemize}
+    
+\end{frame}
+
+\begin{frame}
 	\frametitle{Bibliografía}
 	\nocite{hartley2003multiple}
 	
