--- a/teoricas/teorica_10/src/control.tex
+++ b/teoricas/teorica_10/src/control.tex
@@ -1,16 +1,9 @@
 \begin{frame}
-    \frametitle{Material utilizado para estas slides}
-    
-    \begin{itemize}
-        \item Clase de Nived Chebrolu: \url{https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
-        \item curso: CS373 Udacity Programming a Robotic Car
-    \end{itemize}
-
-    
-\end{frame}
-
-\begin{frame}
     \frametitle{Arquitectural de Control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
+    
+    \begin{center}
+        \includegraphics[width=0.7\columnwidth]{./images/control_architecture.pdf}
+    \end{center}
     
 \end{frame}
