Slides 10: Add dc_motor videos

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -1,5 +1,3 @@
-
-
 \begin{frame}
     \frametitle{Motores DC}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
@@ -10,7 +8,14 @@
         \item Anillos divididos + brushes cambian la dirección de la corriente
     \end{itemize}
     
-    \TODO{Agregar imagenes y/o gif}
+    \begin{figure}[!h]
+        \subfloat[]{
+            \movie[autostart,poster,loop,showcontrols]{\includegraphics[width=0.2\columnwidth,valign=m]{images/dc_motor_3d_video.jpg}}{videos/dc_motor_3d.mp4}
+        }
+        \subfloat[]{
+            \movie[autostart,poster,loop,showcontrols]{\includegraphics[width=0.2\columnwidth,valign=m]{images/dc_motor_video.jpg}}{videos/dc_motor.mp4}
+        }
+    \end{figure}
     
 \end{frame}
 
