Slides 10: Add pwm and dc_motor_driver image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -26,8 +26,19 @@
     \begin{itemize}
         \item Más corriente = más rotación
         \item ¿Cómo modular corriente usando una señal digital?
-        \item 
+        \item \emph{Pulse width modulation} (PWM)
+        \item Duty cycle = ratio de tiempo vs periodo
     \end{itemize}
+    
+    \begin{figure}[!h]
+        \subfloat[]{
+            \includegraphics[width=0.6\columnwidth,valign=m]{images/pwm_signal.pdf}
+        }
+        \hfill
+        \subfloat[]{
+            \includegraphics[width=0.3\columnwidth,valign=m]{images/dc_motor_driver_2x15A_lite.jpg}
+        }
+    \end{figure}
     
 \end{frame}
 
