Slides 10: Add open loop and feedback control

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -43,12 +43,18 @@
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Open loop vs feedback control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
-    \begin{itemize}
-        \item 
-    \end{itemize}
+    \begin{figure}[!h]
+        \subfloat[Open loop control]{
+            \includegraphics[width=0.6\columnwidth,valign=m]{images/open_loop_control.pdf}
+        }
+        
+        \subfloat[Feedback control]{
+            \includegraphics[width=0.7\columnwidth,valign=m]{images/feedback_loop_control.pdf}
+        }
+    \end{figure}
     
 \end{frame}
 
