Slides 10: Add feedback control math image

--- a/teoricas/teorica_10/src/motor_control.tex
+++ b/teoricas/teorica_10/src/motor_control.tex
@@ -52,30 +52,30 @@
         }
         
         \subfloat[Feedback control]{
-            \includegraphics[width=0.7\columnwidth,valign=m]{images/feedback_loop_control.pdf}
+            \includegraphics[width=0.7\columnwidth,valign=m]{images/feedback_control.pdf}
         }
     \end{figure}
     
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Ejemplo de Feedback control}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
     \begin{itemize}
-        \item 
+        \item \TODO{Ejemplo de ducha}
     \end{itemize}
     
 \end{frame}
 
 \begin{frame}
-    \frametitle{Motores DC}
+    \frametitle{Diagrama de bloques}
     \note{Información extraída de https://youtu.be/pEVsedl2KO4?si=_cwQpRPPUnQ04B3c}
     
-    \begin{itemize}
-        \item 
-    \end{itemize}
-    
+    \begin{center}
+        \includegraphics[width=0.8\columnwidth]{images/feedback_control_math.pdf}
+    \end{center}
+   
 \end{frame}
 
 \begin{frame}
